--- a/MediaObjectServer/log4net.config
+++ b/MediaObjectServer/log4net.config
@@ -3,7 +3,7 @@
   <log4net>
     <root>
       <level value="ALL" />
-      <appender-ref ref="console" />
+      <appender-ref ref="ColoredConsoleAppender" />
       <appender-ref ref="file" />
     </root>
     <appender name="console" type="log4net.Appender.ConsoleAppender">
@@ -11,6 +11,7 @@
         <conversionPattern value="%date %level %logger - %message%newline" />
       </layout>
     </appender>
+    
     <appender name="file" type="log4net.Appender.RollingFileAppender">
       <file value="mos.log" />
       <appendToFile value="true" />
@@ -22,5 +23,34 @@
         <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
       </layout>
     </appender>
+  
+<appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+			<mapping>
+				<level value="WARN"/>
+				<foreColor value="Yellow"/>        
+			</mapping>
+			<mapping>
+				<level value="ERROR"/>
+				<foreColor value="Red"/>
+			</mapping>
+			<mapping>
+				<level value="FATAL"/>
+				<foreColor value="White"/>
+				<backColor value="Red" />
+			</mapping>
+			<mapping>
+				<level value="INFO"/>
+				<foreColor value="White"/>        
+			</mapping>
+			<mapping>
+				<level value="DEBUG"/>
+				<foreColor value="Green"/>
+			</mapping>
+		<layout type="log4net.Layout.PatternLayout">
+			<conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
+		</layout>
+	</appender>
+
+
   </log4net>
 </configuration>
