Mos.Entities, Mos.Middleware included

--- a/Mos.Entities/Mos.Entities.csproj
+++ b/Mos.Entities/Mos.Entities.csproj
@@ -47,6 +47,7 @@
     <Compile Include="mos.cs">
       <DependentUpon>mos.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Mos.Utitlities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
