--- a/Mos.App/Mos.App.csproj
+++ b/Mos.App/Mos.App.csproj
@@ -60,6 +60,10 @@
       <Project>{f5f3787c-3b12-4822-98bb-d094c61a5f79}</Project>
       <Name>Mos.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mos.Middleware\Mos.Middleware.csproj">
+      <Project>{aaa0a8ca-0819-4587-bb87-86db4d97c3d3}</Project>
+      <Name>Mos.Middleware</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SimpleTCP\SimpleTCP.csproj">
       <Project>{c9c99f87-e188-49d2-a323-09fe79f39f8d}</Project>
       <Name>SimpleTCP</Name>
