--- a/Mos.Middleware/Mos.Middleware.csproj
+++ b/Mos.Middleware/Mos.Middleware.csproj
@@ -43,11 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="MosServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Mos.Entities\Mos.Entities.csproj">
+      <Project>{f5f3787c-3b12-4822-98bb-d094c61a5f79}</Project>
+      <Name>Mos.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SimpleTCP\SimpleTCP.csproj">
+      <Project>{c9c99f87-e188-49d2-a323-09fe79f39f8d}</Project>
+      <Name>SimpleTCP</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
