--- a/Mos.Middleware/Mos.Middleware.csproj
+++ b/Mos.Middleware/Mos.Middleware.csproj
@@ -43,7 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Mos.Middleware.cs" />
+    <Compile Include="MosServer.cs" />
+    <Compile Include="MosClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
